First Page in Progress

--- a/index.html
+++ b/index.html
@@ -10,19 +10,148 @@
     <link rel="stylesheet" href="./output.css">
     <title>Filmax</title>
 </head>
-<body>
+<body class="text-white bg-black">
+    <div class="wrapper">
 
-    <video width="250" src="">
+        <header class="flex justify-between items-center">
+            <div>
+                <img class="object-cover w-full" src="./Images/logo.svg" alt="logo">
+            </div>
+            <div>
+                <img class="object-cover w-full" src="./Images/menu.svg" alt="menu-icon">
+            </div>
+        </header>
 
-    </video>
+        <h1 class="uppercase font-thiccboi text-7xl font-bold ">film <br>director <br>
+            <span class="font-playfair lowercase text-5xl italic">from</span> amsterdam</h1>
 
+            
+        <main class="custom-grid">
+                
+            <div class="h-screen flex flex-col relative">
+                <video autoplay muted loop class="bg-vid1 bg-cover bg-center object-cover basis-full rounded-4xl">
+                    <!-- <source src="https://assets.website-files.com/630efbe8ac35922a8eff4563/6315ce9a142485132abb302f_1_Crisp TVC on Vimeo-transcode.webm"
+                    type="video/webm"> -->
+                </video>
+                <div class="absolute left-[5%] bottom-[5%]">
+                    <p class="font-thiccboi font-semibold text-3xl uppercase">Crisp</p>
+                    <p class="font-playfair italic text-3xl capitalize">Commercial Ad</p>
+                </div>
+            </div>
+
+            <div class="flex flex-col relative">
+                <video autoplay muted loop class="bg-vid2 bg-cover bg-center object-cover basis-full rounded-4xl">
+                    <!-- <source src="https://assets.website-files.com/630efbe8ac35922a8eff4563/6315ce9a142485132abb302f_1_Crisp TVC on Vimeo-transcode.webm"
+                    type="video/webm"> -->
+                </video>
+                <div class="absolute left-[5%] bottom-[5%]">
+                    <p class="font-thiccboi font-semibold text-3xl uppercase">dancing with stars</p>
+                    <p class="font-playfair italic text-3xl capitalize">Offline by Aerie TV</p>
+                </div>
+            </div>
+
+            <div class="flex flex-col relative">
+                <video autoplay muted loop class="bg-vid3 bg-cover bg-center object-cover basis-full rounded-4xl">
+                    <!-- <source src="https://assets.website-files.com/630efbe8ac35922a8eff4563/6315ce9a142485132abb302f_1_Crisp TVC on Vimeo-transcode.webm"
+                    type="video/webm"> -->
+                </video>
+                <div class="absolute left-[5%] bottom-[5%]">
+                    <p class="font-thiccboi font-semibold text-3xl uppercase">bols</p>
+                    <p class="font-playfair italic text-3xl capitalize">Cocktails Brand</p>
+                </div>
+            </div>
+
+            <div class="flex flex-col relative">
+                <video autoplay muted loop class="bg-vid4 bg-cover bg-center object-cover basis-full rounded-4xl">
+                    <!-- <source src="https://assets.website-files.com/630efbe8ac35922a8eff4563/6315ce9a142485132abb302f_1_Crisp TVC on Vimeo-transcode.webm"
+                    type="video/webm"> -->
+                </video>
+                <div class="absolute left-[5%] bottom-[5%]">
+                    <p class="font-thiccboi font-semibold text-3xl uppercase">Magnolia</p>
+                    <p class="font-playfair italic text-3xl capitalize">Commercial Ad</p>
+                </div>
+            </div>
+
+            <div class="flex flex-col relative">
+                <video autoplay muted loop class="bg-vid5 bg-cover bg-center object-cover basis-full rounded-4xl">
+                    <!-- <source src="https://assets.website-files.com/630efbe8ac35922a8eff4563/6315ce9a142485132abb302f_1_Crisp TVC on Vimeo-transcode.webm"
+                    type="video/webm"> -->
+                </video>
+                <div class="absolute left-[5%] bottom-[5%]">
+                    <p class="font-thiccboi font-semibold text-3xl uppercase">swiss arabian</p>
+                    <p class="font-playfair italic text-3xl capitalize">Campaign film</p>
+                </div>
+            </div>
+
+            <div class="flex flex-col relative">
+                <video autoplay muted loop class="bg-vid6 bg-cover bg-center object-cover basis-full rounded-4xl">
+                    <!-- <source src="https://assets.website-files.com/630efbe8ac35922a8eff4563/6315ce9a142485132abb302f_1_Crisp TVC on Vimeo-transcode.webm"
+                    type="video/webm"> -->
+                </video>
+                <div class="absolute left-[5%] bottom-[5%]">
+                    <p class="font-thiccboi font-semibold text-3xl uppercase">people on the sand</p>
+                    <p class="font-playfair italic text-3xl capitalize">music video</p>
+                </div>
+            </div>
+
+            <div class="flex flex-col relative">
+                <video autoplay muted loop class="bg-vid7 bg-cover bg-center object-cover basis-full rounded-4xl">
+                    <!-- <source src="https://assets.website-files.com/630efbe8ac35922a8eff4563/6315ce9a142485132abb302f_1_Crisp TVC on Vimeo-transcode.webm"
+                    type="video/webm"> -->
+                </video>
+                <div class="absolute left-[5%] bottom-[5%]">
+                    <p class="font-thiccboi font-semibold text-3xl uppercase">saloni</p>
+                    <p class="font-playfair italic text-3xl capitalize">Commercial Ad</p>
+                </div>
+            </div>
+
+            <div class="flex flex-col relative">
+                <video autoplay muted loop class="bg-vid8 bg-cover bg-center object-cover basis-full rounded-4xl">
+                    <!-- <source src="https://assets.website-files.com/630efbe8ac35922a8eff4563/6315ce9a142485132abb302f_1_Crisp TVC on Vimeo-transcode.webm"
+                    type="video/webm"> -->
+                </video>
+                <div class="absolute left-[5%] bottom-[5%]">
+                    <p class="font-thiccboi font-semibold text-3xl uppercase">iriedaily</p>
+                    <p class="font-playfair italic text-3xl capitalize">beware of the monkey</p>
+                </div>
+            </div>
+
+            <div class="flex flex-col relative">
+                <video autoplay muted loop class="bg-vid9 bg-cover bg-center object-cover basis-full rounded-4xl">
+                    <!-- <source src="https://assets.website-files.com/630efbe8ac35922a8eff4563/6315ce9a142485132abb302f_1_Crisp TVC on Vimeo-transcode.webm"
+                    type="video/webm"> -->
+                </video>
+                <div class="absolute left-[5%] bottom-[5%]">
+                    <p class="font-thiccboi font-semibold text-3xl uppercase">samsung</p>
+                    <p class="font-playfair italic text-3xl capitalize">food pics made epic</p>
+                </div>
+            </div>
+
+            <div class="flex flex-col relative">
+                <video autoplay muted loop class="bg-vid10 bg-cover bg-center object-cover basis-full rounded-4xl">
+                    <!-- <source src="https://assets.website-files.com/630efbe8ac35922a8eff4563/6315ce9a142485132abb302f_1_Crisp TVC on Vimeo-transcode.webm"
+                    type="video/webm"> -->
+                </video>
+                <div class="absolute left-[5%] bottom-[5%]">
+                    <p class="font-thiccboi font-semibold text-3xl uppercase">leica m11</p>
+                    <p class="font-playfair italic text-3xl capitalize">behind the scenes</p>
+                </div>
+            </div>
+
+       </main>
+    </div>
+
+    <footer class="wrapper bg-black text-right justify-items-end">
+        <p class="text-6xl uppercase font-semibold font-thiccboi">Got a project in mind?</p>
+        <button class="w-max text-6xl font-playfair italic"><a href="#">~ Let’s talk.</a></button>
+    </footer>
 
 
 </body>
 </html>
-
+<!-- 
 <h1 class="font-thiccboi">My Tailwind Project</h1>
 <p>Resources</p>
 <a href="https://github.com/tailwindlabs/tailwindcss/blob/master/stubs/defaultConfig.stub.js" target="_blank">Github</a>
 
-<a href="https://tailwindcss.com/docs/adding-custom-styles" target="_blank">Documentation</a>
+<a href="https://tailwindcss.com/docs/adding-custom-styles" target="_blank">Documentation</a> -->
