My First Multiple Page website with Tailwind is now Complete

--- a/blog.html
+++ b/blog.html
@@ -36,7 +36,7 @@
         </div>
 
         <main class="col-start-2 custom-grid auto-rows-[400px]">
-            <div class="text-base relative flex hover:bg-vid1 bg-none bg-cover bg-center rounded-4xl">
+            <div class="text-base relative flex hover:bg-vid1 bg-grey3 bg-cover bg-center rounded-4xl">
                 <!-- <img class="object-cover rounded-4xl h-full" src="./Images/poster-00001.jpg" alt=""> -->
                 <div class="absolute left-[5%] top-[10%] space-y-2">
                     <p class="uppercase font-bold font-thiccboi text-[2em]">crisp</p>
@@ -45,7 +45,7 @@
                 <p class="text-grey2 absolute right-[5%] bottom-[5%] text-[1.5em] font-semibold font-thiccboi">2022</p>
             </div>
 
-            <div class="text-base relative hover:bg-vid2 bg-none bg-cover bg-center rounded-4xl">
+            <div class="text-base relative hover:bg-vid2 bg-grey3 bg-cover bg-center rounded-4xl">
                 <!-- <img class="object-cover rounded-4xl h-full" src="./Images/poster-00002.jpg" alt=""> -->
                 <div class="absolute left-[5%] top-[10%] space-y-2">
                     <p class="uppercase font-bold font-thiccboi text-[2em]">dancing with stars</p>
@@ -54,7 +54,7 @@
                 <p class="text-grey2 absolute right-[5%] bottom-[5%] text-[1.5em] font-semibold font-thiccboi">2022</p>
             </div>
 
-            <div class="text-base relative hover:bg-vid3 bg-none bg-cover bg-center rounded-4xl">
+            <div class="text-base relative hover:bg-vid3 bg-grey3 bg-cover bg-center rounded-4xl">
                 <!-- <img class="object-cover rounded-4xl h-full" src="./Images/poster-00003.jpg" alt=""> -->
                 <div class="absolute left-[5%] top-[10%] space-y-2">
                     <p class="uppercase font-bold font-thiccboi text-[2em]">bols</p>
@@ -63,7 +63,7 @@
                 <p class="text-grey2 absolute right-[5%] bottom-[5%] text-[1.5em] font-semibold font-thiccboi">2022</p>
             </div>
 
-            <div class="text-base relative hover:bg-vid4 bg-none bg-cover bg-center rounded-4xl">
+            <div class="text-base relative hover:bg-vid4 bg-grey3 bg-cover bg-center rounded-4xl">
                 <!-- <img class="object-cover rounded-4xl h-full" src="./Images/poster-00004.jpg" alt=""> -->
                 <div class="absolute left-[5%] top-[10%] space-y-2">
                     <p class="uppercase font-bold font-thiccboi text-[2em]">magnolia</p>
@@ -72,7 +72,7 @@
                 <p class="text-grey2 absolute right-[5%] bottom-[5%] text-[1.5em] font-semibold font-thiccboi">2022</p>
             </div>
 
-            <div class="text-base relative hover:bg-vid5 bg-none bg-cover bg-center rounded-4xl">
+            <div class="text-base relative hover:bg-vid5 bg-grey3 bg-cover bg-center rounded-4xl">
                 <!-- <img class="object-cover rounded-4xl h-full" src="./Images/poster-00005.jpg" alt=""> -->
                 <div class="absolute left-[5%] top-[10%] space-y-2">
                     <p class="uppercase font-bold font-thiccboi text-[2em]">swiss arabian</p>
@@ -81,7 +81,7 @@
                 <p class="text-grey2 absolute right-[5%] bottom-[5%] text-[1.5em] font-semibold font-thiccboi">2022</p>
             </div>
 
-            <div class="text-base relative hover:bg-vid6 bg-none bg-cover bg-center rounded-4xl">
+            <div class="text-base relative hover:bg-vid6 bg-grey3 bg-cover bg-center rounded-4xl">
                 <!-- <img class="object-cover rounded-4xl h-full" src="./Images/poster-00006.jpg" alt=""> -->
                 <div class="absolute left-[5%] top-[10%] space-y-2">
                     <p class="uppercase font-bold font-thiccboi text-[2em]">people on the sand</p>
@@ -90,7 +90,7 @@
                 <p class="text-grey2 absolute right-[5%] bottom-[5%] text-[1.5em] font-semibold font-thiccboi">2022</p>
             </div>
 
-            <div class="text-base relative hover:bg-vid7 bg-none bg-cover bg-center rounded-4xl">
+            <div class="text-base relative hover:bg-vid7 bg-grey3 bg-cover bg-center rounded-4xl">
                 <!-- <img class="object-cover rounded-4xl h-full" src="./Images/poster-00007.jpg" alt=""> -->
                 <div class="absolute left-[5%] top-[10%] space-y-2">
                     <p class="uppercase font-bold font-thiccboi text-[2em]">saloni</p>
@@ -99,7 +99,7 @@
                 <p class="text-grey2 absolute right-[5%] bottom-[5%] text-[1.5em] font-semibold font-thiccboi">2022</p>
             </div>
 
-            <div class="md:col-start-2 text-base relative hover:bg-vid8 bg-none bg-cover bg-center rounded-4xl">
+            <div class="md:col-start-2 text-base relative hover:bg-vid8 bg-grey3 bg-cover bg-center rounded-4xl">
                 <!-- <img class="object-cover rounded-4xl h-full" src="./Images/poster-00008.jpg" alt=""> -->
                 <div class="absolute left-[5%] top-[10%] space-y-2">
                     <p class="uppercase font-bold font-thiccboi text-[2em]">iriedaily</p>
@@ -108,7 +108,7 @@
                 <p class="text-grey2 absolute right-[5%] bottom-[5%] text-[1.5em] font-semibold font-thiccboi">2022</p>
             </div>
 
-            <div class="lg:col-start-3 text-base relative hover:bg-vid9 bg-none bg-cover bg-center rounded-4xl">
+            <div class="lg:col-start-3 text-base relative hover:bg-vid9 bg-grey3 bg-cover bg-center rounded-4xl">
                 <!-- <img class="object-cover rounded-4xl h-full" src="./Images/poster-00009.jpg" alt=""> -->
                 <div class="absolute left-[5%] top-[10%] space-y-2">
                     <p class="uppercase font-bold font-thiccboi text-[2em]">samsung</p>
