--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <!-- stackingContext -->
         <main class="row-start-1 col-start-2 col-span-1 custom-grid z-0">
             <div class="md:col-span-2 flex flex-col relative h-screen">
-                <video  muted loop class=" object-cover h-full rounded-4xl">
+                <video autoplay muted loop class=" object-cover h-full rounded-4xl">
                     <source src="https://assets.website-files.com/630efbe8ac35922a8eff4563/6315ce9a142485132abb302f_1_Crisp TVC on Vimeo-transcode.webm"
                     type="video/webm">
                 </video>
@@ -56,7 +56,7 @@
             </div>
 
             <div class="flex flex-col relative">
-                <video  muted loop class=" object-cover h-full rounded-4xl">
+                <video autoplay muted loop class=" object-cover h-full rounded-4xl">
                     <source src="
                     https://assets.website-files.com/630efbe8ac35922a8eff4563/63160fd73c52f0234c85e7de_2_Offline by Aerie TV ad for Dancing With Stars-transcode.webm">
                 </video>
@@ -67,7 +67,7 @@
             </div>
 
             <div class="flex flex-col relative">
-                <video  muted loop class=" object-cover h-full rounded-4xl">
+                <video autoplay muted loop class=" object-cover h-full rounded-4xl">
                     <source src="https://assets.website-files.com/630efbe8ac35922a8eff4563/63160fdd3de44a91be98c84f_3_BOLS cocktails-transcode.webm"
                     type="video/webm">
                 </video>
@@ -78,7 +78,7 @@
             </div>
 
             <div class="md:col-span-2 flex flex-col relative">
-                <video  muted loop class=" object-cover h-full rounded-4xl">
+                <video autoplay muted loop class=" object-cover h-full rounded-4xl">
                     <source src="
                     https://assets.website-files.com/630efbe8ac35922a8eff4563/631610d40eff2219c518f802_4_Magnolia FW22-transcode.webm"
                     type="video/webm">
@@ -90,7 +90,7 @@
             </div>
 
             <div class="flex flex-col relative">
-                <video  muted loop class=" object-cover h-full rounded-4xl">
+                <video autoplay muted loop class=" object-cover h-full rounded-4xl">
                     <source src="https://assets.website-files.com/630efbe8ac35922a8eff4563/63161263142485d688bef6b6_5_Swiss Arabian Campaign film-transcode.webm">
                 </video>
                 <div class="absolute left-[5%] bottom-[5%]">
@@ -100,7 +100,7 @@
             </div>
 
             <div class="flex flex-col relative">
-                <video  muted loop class=" object-cover basis-full rounded-4xl">
+                <video autoplay muted loop class=" object-cover basis-full rounded-4xl">
                     <source src="
                     https://assets.website-files.com/630efbe8ac35922a8eff4563/6316126d0bda2858b142b670_6_TRACA 'People On The Sand' Music video-transcode.webm">
                 </video>
@@ -111,7 +111,7 @@
             </div>
 
             <div class="md:col-span-2 flex flex-col relative">
-                <video  muted loop class="object-cover h-full rounded-4xl">
+                <video autoplay muted loop class="object-cover h-full rounded-4xl">
                     <source src="https://assets.website-files.com/630efbe8ac35922a8eff4563/6316130319188666ec754227_7_SALONI - F-W19-transcode.webm"
                     type="video/webm">
                 </video>
@@ -122,7 +122,7 @@
             </div>
 
             <div class="flex flex-col relative">
-                <video  muted loop class=" object-cover h-full rounded-4xl">
+                <video autoplay muted loop class=" object-cover h-full rounded-4xl">
                     <source src="https://assets.website-files.com/630efbe8ac35922a8eff4563/6316132eede28c1ee36bfb3a_8_IRIEDAILY - Beware of the Monkey on Vimeo-transcode.webm"
                     type="video/webm">
                 </video>
@@ -133,7 +133,7 @@
             </div>
 
             <div class="flex flex-col relative">
-                <video  muted loop class="object-cover h-full rounded-4xl">
+                <video autoplay muted loop class="object-cover h-full rounded-4xl">
                     <source src="https://assets.website-files.com/630efbe8ac35922a8eff4563/63161337ede28c21b46bfbb1_9_SAMSUNG 'Food pics made epic' Spain-transcode.webm"
                     type="video/webm">
                 </video>
@@ -144,7 +144,7 @@
             </div>
 
             <div class="md:col-span-2 flex flex-col relative">
-            <video  muted loop class="object-cover h-full rounded-4xl">
+            <video autoplay muted loop class="object-cover h-full rounded-4xl">
                     <source src="https://assets.website-files.com/630efbe8ac35922a8eff4563/63161404425a305f60995923_12_Leica M11 x BTS on Vimeo-transcode.webm"
                     type="video/webm">
                 </video>
