--- a/work.html
+++ b/work.html
@@ -39,7 +39,7 @@
         <main class="col-start-2 col-span-1 custom-grid z-0">
 
             <div class="flex flex-col relative">
-                <video  muted loop class=" object-cover h-full rounded-4xl">
+                <video autoplay muted loop class=" object-cover h-full rounded-4xl">
                     <source src="https://assets.website-files.com/630efbe8ac35922a8eff4563/6315ce9a142485132abb302f_1_Crisp TVC on Vimeo-transcode.webm"
                     type="video/webm">
                 </video>
@@ -50,7 +50,7 @@
             </div>
 
             <div class="flex flex-col relative">
-                <video  muted loop class=" object-cover h-full rounded-4xl">
+                <video autoplay muted loop class=" object-cover h-full rounded-4xl">
                     <source src="
                     https://assets.website-files.com/630efbe8ac35922a8eff4563/63160fd73c52f0234c85e7de_2_Offline by Aerie TV ad for Dancing With Stars-transcode.webm">
                 </video>
@@ -61,7 +61,7 @@
             </div>
 
             <div class="flex flex-col relative">
-                <video  muted loop class=" object-cover h-full rounded-4xl">
+                <video autoplay muted loop class=" object-cover h-full rounded-4xl">
                     <source src="https://assets.website-files.com/630efbe8ac35922a8eff4563/63160fdd3de44a91be98c84f_3_BOLS cocktails-transcode.webm"
                     type="video/webm">
                 </video>
@@ -72,7 +72,7 @@
             </div>
 
             <div class="flex flex-col relative">
-                <video  muted loop class=" object-cover h-full rounded-4xl">
+                <video autoplay muted loop class=" object-cover h-full rounded-4xl">
                     <source src="
                     https://assets.website-files.com/630efbe8ac35922a8eff4563/631610d40eff2219c518f802_4_Magnolia FW22-transcode.webm"
                     type="video/webm">
@@ -84,7 +84,7 @@
             </div>
 
             <div class="flex flex-col relative">
-                <video  muted loop class=" object-cover h-full rounded-4xl">
+                <video autoplay muted loop class=" object-cover h-full rounded-4xl">
                     <source src="https://assets.website-files.com/630efbe8ac35922a8eff4563/63161263142485d688bef6b6_5_Swiss Arabian Campaign film-transcode.webm">
                 </video>
                 <div class="my-4">
@@ -94,7 +94,7 @@
             </div>
 
             <div class="flex flex-col relative">
-                <video  muted loop class=" object-cover basis-full rounded-4xl">
+                <video autoplay muted loop class=" object-cover basis-full rounded-4xl">
                     <source src="
                     https://assets.website-files.com/630efbe8ac35922a8eff4563/6316126d0bda2858b142b670_6_TRACA 'People On The Sand' Music video-transcode.webm">
                 </video>
@@ -105,7 +105,7 @@
             </div>
 
             <div class="flex flex-col relative">
-                <video  muted loop class="object-cover h-full rounded-4xl">
+                <video autoplay muted loop class="object-cover h-full rounded-4xl">
                     <source src="https://assets.website-files.com/630efbe8ac35922a8eff4563/6316130319188666ec754227_7_SALONI - F-W19-transcode.webm"
                     type="video/webm">
                 </video>
@@ -116,7 +116,7 @@
             </div>
 
             <div class="flex flex-col relative">
-                <video  muted loop class=" object-cover h-full rounded-4xl">
+                <video autoplay muted loop class=" object-cover h-full rounded-4xl">
                     <source src="https://assets.website-files.com/630efbe8ac35922a8eff4563/6316132eede28c1ee36bfb3a_8_IRIEDAILY - Beware of the Monkey on Vimeo-transcode.webm"
                     type="video/webm">
                 </video>
@@ -127,7 +127,7 @@
             </div>
 
             <div class="flex flex-col relative">
-                <video  muted loop class="object-cover h-full rounded-4xl">
+                <video autoplay muted loop class="object-cover h-full rounded-4xl">
                     <source src="https://assets.website-files.com/630efbe8ac35922a8eff4563/63161337ede28c21b46bfbb1_9_SAMSUNG 'Food pics made epic' Spain-transcode.webm"
                     type="video/webm">
                 </video>
@@ -138,7 +138,7 @@
             </div>
 
             <div class="flex flex-col relative">
-                <video  muted loop class="object-cover h-full rounded-4xl">
+                <video autoplay muted loop class="object-cover h-full rounded-4xl">
                     <source src="https://assets.website-files.com/630efbe8ac35922a8eff4563/6318a199ed0f4f4c02f72d77_10_SHOWREEL - Filmmaker & Colorist-transcode.webm"
                     type="video/webm">
                 </video>
@@ -149,7 +149,7 @@
             </div>
 
             <div class="flex flex-col relative">
-                <video  muted loop class="object-cover h-full rounded-4xl">
+                <video autoplay muted loop class="object-cover h-full rounded-4xl">
                     <source src="https://assets.website-files.com/630efbe8ac35922a8eff4563/6318a1a3791165218081c72f_11_Director’s cut for Luca Santonastaso-transcode.webm"
                     type="video/webm">
                 </video>
@@ -160,7 +160,7 @@
             </div>
 
             <div class="lg:col-start-4 md:col-start-3  flex flex-col relative">
-            <video  muted loop class="object-cover h-full rounded-4xl">
+            <video autoplay muted loop class="object-cover h-full rounded-4xl">
                     <source src="https://assets.website-files.com/630efbe8ac35922a8eff4563/63161404425a305f60995923_12_Leica M11 x BTS on Vimeo-transcode.webm"
                     type="video/webm">
                 </video>
